# rosbag_to_dataset

./: .gitignore  CMakeLists.txt  README.md  package.xml
docker/: Dockerfile  build.sh  entrypoint.sh  interact.sh
launch/: airsim.launch  rosbag_to_dataset.launch  to_csv.launch  velodyne.launch
rviz_config/: airsim.rviz  debug.rviz  velodyne.rviz
src/: rosbag_to_csv.cpp  rosbag_to_dataset.cpp
